# rust-gpt

./: Cargo.toml  LICENSE.txt  README.md
src/: chat.rs  completion.rs  lib.rs
tests/: example_request.rs
