[package]
name = "rust-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
reqwest = "0.11.14"
serde = {version = "1.0.153", features = ["derive"]}
serde_json = "1.0.94"

[dev-dependencies]
tokio = { version = "1.13.0", features = ["full"] }
