[package]
name = "rust-gpt"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = ">= 0.1"
once_cell = "~1.17"
reqwest = "~0.11"
serde = {version = "~1.0", features = ["derive"]}
serde_json = "~1.0"

[dev-dependencies]
tokio = { version = "1.13.0", features = ["full"] }
