[package]
name = "rust-gpt"
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "A library for interaction with the Completion/Chat OpenAI API."
repository = "https://github.com/BaconStrps/rust-gpt"
keywords = ["gpt", "openai", "api", "completion", "chat"]
categories = ["api-bindings", "asynchronous"]
exclude = ["tests"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = ">= 0.1"
once_cell = "~1.17"
reqwest = "~0.11"
serde = {version = "~1.0", features = ["derive"]}
serde_json = "~1.0"
tokio = { version = ">= 1.0", default-features = false, features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.13.0", features = ["full"] }
